clean up some warnings